<resources>
    <string name="app_name">javamysql_application_mobile_adoptme</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="protecting_your_digital_life_one_paw_fect_step_a_time">Protecting your digital life...</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_account">Account</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_mapa">Mapa de refugio</string>
    <string name="Titulo_mapa">Mapa de refugios</string>
    <string name="Refugios_cercanos">Refugios cercanos</string>
    <string name="info">info</string>
    <string name="foto_mascota">foto_mascota\n</string>
</resources>