<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.messages.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat" />


    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages">

        <action
            android:id="@+id/action_messages_to_chat"
            app:destination="@id/chatFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.favorites.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/accountProfileFragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.AccountProfileFragment"
        android:label="AccountProfileFragment" />
    <fragment
        android:id="@+id/accountNotificationsFragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.AccountNotificationsFragment"
        android:label="AccountNotificationsFragment" />
    <fragment
        android:id="@+id/accountPetPreferencesFragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.AccountPetPreferencesFragment"
        android:label="AccountPetPreferencesFragment" />
    <fragment
        android:id="@+id/accountSecurityFragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.AccountSecurityFragment"
        android:label="AccountSecurityFragment" />
    <fragment
        android:id="@+id/accountAppearanceFragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.AccountAppearanceFragment"
        android:label="AccountAppearanceFragment" />
    <fragment
        android:id="@+id/accountHelpFragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.AccountHelpFragment"
        android:label="AccountHelpFragment" />
    <fragment
        android:id="@+id/accountTestsFragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.AccountTestsFragment"
        android:label="AccountTestsFragment" />
    <fragment
        android:id="@+id/navigation_mapa"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.account.MapaFragment"
        android:label="@string/title_mapa"
        tools:layout="@layout/fragment_mapa" />
    <fragment
        android:id="@+id/navigation_catalogo"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.catalogo.CatalogoFragment"
        android:label="Catálogo"
        tools:layout="@layout/fragment_catalogo" />
    <fragment
        android:id="@+id/navigation_mascota_detalle"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.detalle.MascotaDetalleFragment"
        android:label="Detalles de Mascota"
        tools:layout="@layout/fragment_mascota_detalle" />

    <!-- PASO 1 -->
    <fragment
        android:id="@+id/solicitudPaso1Fragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.solicitud.solicitud_paso1Fragment"
        android:label="SolicitudPaso1Fragment"
        tools:layout="@layout/fragment_solicitud_paso1">
        <action
            android:id="@+id/action_paso1_to_paso2"
            app:destination="@id/solicitudPaso2Fragment" />
    </fragment>

    <!-- PASO 2 -->
    <fragment
        android:id="@+id/solicitudPaso2Fragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.solicitud.solicitud_paso2Fragment"
        android:label="SolicitudPaso2Fragment"
        tools:layout="@layout/fragment_solicitud_paso2">
        <action
            android:id="@+id/action_paso2_to_paso3"
            app:destination="@id/solicitudPaso3Fragment" />
        <action
            android:id="@+id/action_paso2_to_paso1"
            app:destination="@id/solicitudPaso1Fragment" />
    </fragment>

    <!-- PASO 3 -->
    <fragment
        android:id="@+id/solicitudPaso3Fragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.solicitud.solicitud_paso3Fragment"
        android:label="SolicitudPaso3Fragment"
        tools:layout="@layout/fragment_solicitud_paso3">
        <action
            android:id="@+id/action_paso3_to_paso4"
            app:destination="@id/solicitudPaso4Fragment" />
        <action
            android:id="@+id/action_paso3_to_paso2"
            app:destination="@id/solicitudPaso2Fragment" />
    </fragment>

    <!-- PASO 4 -->
    <fragment
        android:id="@+id/solicitudPaso4Fragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.solicitud.solicitud_paso4Fragment"
        android:label="SolicitudPaso4Fragment"
        tools:layout="@layout/fragment_solicitud_paso4">
        <action
            android:id="@+id/action_paso4_to_paso5"
            app:destination="@id/solicitudPaso5Fragment" />
        <action
            android:id="@+id/action_paso4_to_paso3"
            app:destination="@id/solicitudPaso3Fragment" />
    </fragment>

    <!-- PASO 5 -->
    <fragment
        android:id="@+id/solicitudPaso5Fragment"
        android:name="com.example.javamysql_application_mobile_adoptme.View.ui.solicitud.solicitud_paso5Fragment"
        android:label="SolicitudPaso5Fragment"
        tools:layout="@layout/fragment_solicitud_paso5">
        <action
            android:id="@+id/action_paso5_to_paso4"
            app:destination="@id/solicitudPaso4Fragment" />
    </fragment>







</navigation>